# docs/swagger.json
@@ -1,8 +1,22 @@
 {
     "swagger": "2.0",
     "info": {
-        "contact": {}
+        "description": "应用系统接口基于Golang Gin框架开发，Gin是一个非常受欢迎的Golang Web框架，在GitHub上已经有47k的星星，后续开发可以参考官方手册,https://gin-gonic.com/",
+        "title": "应用系统接口服务",
+        "termsOfService": "http://127.0.0.1:8080/api/v1/token",
+        "contact": {
+            "name": "Cameron",
+            "url": "http://www.swagger.io/support",
+            "email": "support@swagger.io"
+        },
+        "license": {
+            "name": "Apache 2.0",
+            "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
+        },
+        "version": "1.0"
     },
+    "host": "http://127.0.0.1:8080",
+    "basePath": "/api/v1",
     "paths": {
         "/api/v1/information/sample/delete": {
             "post": {
@@ -16,14 +30,11 @@
                 "summary": "删除样本列表",
                 "parameters": [
                     {
-                        "default": 0,
+                        "type": "string",
                         "description": "默认为 空",
-                        "name": "level",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "type": "integer"
-                        }
+                        "name": "id",
+                        "in": "formData",
+                        "required": true
                     },
                     {
                         "type": "integer",
